Vice installation script and various fixes
The nyan vectrex image was not downloaded automatically. On Ubuntu, the
firmware was not included so a script has been provided which should run
on any POSIX compliant shell and any distro (with some modifications).

The installation script has been tested on Ubuntu 16 LTS with dash.

Playing the Grand Prix Circuit example before the music intermezzo
exercise was a mistake as it would only confuse attendees.

The statistics on the floppy slide were wrong and have been fixed.

--- a/exercises.tex
+++ b/exercises.tex
@@ -37,7 +37,10 @@ Deze kunt u \href{http://vice-emu.sourceforge.net/}{hier} vinden.
 Hieronder volgen kant-en-klare recepten voor verschillende besturingssytemen.
 
 \subsubsection{Linux}
-Het makkelijkst is om VICE met uw package manager te installeren. Bijvoorbeeld: \verb:sudo apt install vice: op Debian, Ubuntu en varianten.
+Het makkelijkst is om het inbegrepen script \verb:vice.sh: als superuser te draaien:
+\verb:sudo sh vice.sh:.
+Als dit niet werkt, dan kunt u in het document de variabelen aanpassen (bijv. Arch en CentOS hebben een andere package manager dan Debian en Ubuntu).
+
 Als dit niet werkt maar u heeft Wine dan kunt u het recept van Windows ook volgen.
 Voor de masochisten is er natuurlijk ook altijd de \href{http://sourceforge.net/projects/vice-emu/files/releases/vice-3.1.tar.gz/download}{source code}.
 
