--- a/exercises_en.tex
+++ b/exercises_en.tex
@@ -36,8 +36,11 @@ You can download the emulator \href{http://vice-emu.sourceforge.net/}{from this 
 Depending on your operating system, some additional setup may be required as will be discussed in the next section.
 
 \subsubsection{Linux}
-The easiest method is to use your package manager to install VICE. Example \verb:sudo apt install vice: on Debian, Ubuntu and derivatives.
-If this does not work, but you have Wine installed, you can also use the Windows recipe.
+The easiest method is to run the included script \verb:vice.sh: as root:
+\verb:sudo sh vice.sh:.
+If this does not work, you can try to change the variables in the document (e.g. Arch and CentOS use a different package manager).
+
+If this does not work either, but you have Wine installed, you can also use the Windows recipe.
 The die-hards may also try to compile the \href{http://sourceforge.net/projects/vice-emu/files/releases/vice-3.1.tar.gz/download}{source code}.
 
 \subsubsection{Windows}
