--- a/music.tex
+++ b/music.tex
@@ -206,12 +206,9 @@ Raad welk muziekje bij welke computer/console hoort!
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Intermezzo - Voorbeelden}
+\frametitle{Intermezzo - Voorbeeld}
 
-\begin{itemize}
-\item Grand Prix Circuit (PC, C64)
-\item Castlevania (PC, NES, C64)
-\end{itemize}
+Castlevania
 
 \end{frame}
 
