--- a/music_en.tex
+++ b/music_en.tex
@@ -206,12 +206,9 @@ Guess which music belongs to which machine!
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Intermezzo - Examples}
+\frametitle{Intermezzo - Example}
 
-\begin{itemize}
-\item Grand Prix Circuit (PC, C64)
-\item Castlevania (PC, NES, C64)
-\end{itemize}
+Castlevania
 
 \end{frame}
 
