--- a/workshop.tex
+++ b/workshop.tex
@@ -33,7 +33,7 @@
 
 \end{titelframe}
 
-\begin{frame}[noframenumbering]
+\begin{frame}
 \frametitle{Inhoudsopgave}
 \tableofcontents
 \end{frame}
@@ -49,7 +49,7 @@
 
 %----------------------------------------------
 
-\begin{frame}[noframenumbering]
+\begin{frame}
 \frametitle{Beperkte Omgevingen}
 
 \begin{itemize}
@@ -347,7 +347,7 @@
 
 \begin{itemize}
 \item Sequentieel magnetisch geheugen
-\item 450KB-2000KB
+\item 350KB-2000KB
 \item Enkel-/dubbelzijdig
 \item Onhandig
 \item Handmatig heen en weer zoeken
@@ -375,9 +375,10 @@
 \begin{itemize}
 \item Echt floppy
 \item 5.25 inch
-\item SD
+\item SD, DD
 \item 300 RPM (5 revs/sec)
-\item 186KB
+\item 178KB
+\item 2 blocks per seconde (512 bytes/sec)
 \end{itemize}
 
 \end{frame}
