--- a/workshop_en.tex
+++ b/workshop_en.tex
@@ -33,7 +33,7 @@
 
 \end{titelframe}
 
-\begin{frame}[noframenumbering]
+\begin{frame}
 \frametitle{Table of Contents}
 \tableofcontents
 \end{frame}
@@ -49,7 +49,7 @@
 
 %----------------------------------------------
 
-\begin{frame}[noframenumbering]
+\begin{frame}
 \frametitle{Restricted Environments}
 
 \begin{itemize}
@@ -347,7 +347,7 @@
 
 \begin{itemize}
 \item Sequential magnetic memory
-\item 450KB-2000KB
+\item 350KB-2000KB
 \item Single/Double density
 \item Clumsy
 \item Manually seek forward and rewind tape
@@ -375,9 +375,10 @@
 \begin{itemize}
 \item Real floppy
 \item 5.25 inch
-\item SD
+\item SD, DD
 \item 300 RPM (5 revs/sec)
-\item 186KB
+\item 178KB
+\item 2 blocks per second (512 bytes/sec)
 \end{itemize}
 
 \end{frame}
