--- a/graphics.tex
+++ b/graphics.tex
@@ -33,7 +33,7 @@
 \begin{tabular}{|l|l|l|}
 \hline Model & Video & Kleuren \\
 PET & geen (CPU) & 1 \\
-VIC-20 & VIC I & 16 \\
+VIC-20 & VIC & 16 \\
 C64 & VIC II & 16 \\
 Apple ][ & geen (CPU, TTL) & 1 of 4 \\
 IBM PC & mono of CGA & 1 of 4 \\
