--- a/graphics_en.tex
+++ b/graphics_en.tex
@@ -33,7 +33,7 @@
 \begin{tabular}{|l|l|l|}
 \hline Model & Video & Colors \\
 PET & none (CPU) & 1 \\
-VIC-20 & VIC I & 16 \\
+VIC-20 & VIC & 16 \\
 C64 & VIC II & 16 \\
 Apple ][ & none (CPU, TTL) & 1 or 4 \\
 IBM PC & mono or CGA & 1 or 4 \\
