--- a/workshop.tex
+++ b/workshop.tex
@@ -50,141 +50,6 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Beperkte Omgevingen}
-
-\begin{itemize}
-\item Allereerste `computers'
-\item Militaire toepassingen
-\item Kamersgrote machines en torenhoge energierekeningen
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Allereerste `computers'}
-
-\begin{itemize}
-\item Rekentabellen (sin, cos)
-\item Administratie (statistiek, belasting)
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Rekentabellen}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/rekentabellen.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Militaire toepassingen}
-
-\begin{itemize}
-\item Artillerie (boog van kogel)
-\item Cryptografie (enigma)
-\item OXO
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Bombe}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/bombe.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{EDSAC}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/edsac.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{EDSAC Debugging}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/edsac_crts.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{OXO}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/oxo.jpg}
-\end{figure}
-% http://www.dcs.warwick.ac.uk/~edsac/
-% eventueel OXO in emulator laten zien.
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Mainframes}
-
-\begin{itemize}
-\item Multi-user omgeving
-\item Batch
-\item Reserveren
-\item Onpraktisch
-\item Heel duur: \$100,000+ / \$1,000,000+
-\item Gebruikersonvriendelijk
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Mini-mainframes}
-
-\begin{figure}
-\includegraphics[width=0.45\linewidth]{images/pdp8.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Mini-mainframes}
-
-\begin{itemize}
-\item Duur, maar niet onbetaalbaar: \$10,000+
-\item Acceptabele performance
-\item `Gewone' klanten
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
 \frametitle{Introductie van de Personal Computer}
 
 \begin{itemize}
@@ -298,10 +163,79 @@
 %----------------------------------------------
 
 \begin{frame}
+\frametitle{Ontmoet de Succesvolste PC ooit}
+
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{images/desk.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{De Enige Echte - Broodtrommel}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/c64.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{De Enige Echte - Broodtrommel}
+
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{images/breadbin.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{De Enige Echte - C64C}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/c64c.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Moderne Variant}
+
+\begin{figure}
+\includegraphics[width=0.5\linewidth]{images/boot.png}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}{Intermezzo}
+
+\begin{itemize}
+\item Ga naar https://www.github.com/FolkertVanVerseveld
+\item Klik op `workshop' en dan op `releases'
+\item Download het release archief en pak het uit
+\item Probeer wat opdrachten te maken
+\item Pas de code aan of probeer zelf een BASIC programma te schrijven
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
 \frametitle{Ter Vergelijking}
 
 \begin{tabular}{|l|l|l|l|l|}
-\hline Jaar & Model & Toen & Omg. & Nu (ebay) \\ \hline
+\hline Jaar & Model & Toen & Nu & Nu (ebay) \\ \hline
 1977 & PET & \$795 & \$3150 & \$600-\$800 \\
 1980 & VIC-20 & \$299.95 & \$874 & \$30-\$110 \\
 1982 & C64 & \$595 & \$1480 & \$10-\$50 \\ \hline
@@ -374,67 +308,12 @@
 
 \begin{itemize}
 \item Echt floppy
-\item 5.25 inch
-\item SD, DD
+\item 5.25 inch, SD, DD
+\item Enkel-/dubbelzijdig
 \item 300 RPM (5 revs/sec)
 \item 178KB
-\item 2 blocks per seconde (512 bytes/sec)
+\item Ongeveer 2 blocks/sec (512 bytes/sec)
 \end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Ontmoet de Succesvolste PC ooit}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/desk.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{De Enige Echte - Broodtrommel}
-
-\begin{figure}
-\includegraphics[width=0.6\linewidth]{images/c64.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{De Enige Echte - Broodtrommel}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/breadbin.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{De Enige Echte - C64C}
-
-\begin{figure}
-\includegraphics[width=0.6\linewidth]{images/c64c.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Moderne Variant}
-
-\begin{figure}
-\includegraphics[width=0.5\linewidth]{images/boot.png}
-\end{figure}
 
 \end{frame}
 
@@ -599,20 +478,6 @@ NES & 2048 & Ricoh 2A03 & 1.6 \\ \hline
 \begin{lstlisting}
 10FORI=0TO16:PRINT2^I,I:NEXTI
 \end{lstlisting}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}{Intermezzo}
-
-\begin{itemize}
-\item Ga naar https://www.github.com/FolkertVanVerseveld
-\item Klik op `workshop' en dan op `releases'
-\item Download het release archief en pak het uit
-\item Probeer wat opdrachten te maken
-\item Pas de code aan of probeer zelf een BASIC programma te schrijven
-\end{itemize}
 
 \end{frame}
 
