--- a/workshop_en.tex
+++ b/workshop_en.tex
@@ -50,141 +50,6 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Restricted Environments}
-
-\begin{itemize}
-\item Very first `computers'
-\item Primarily built for Army, Universities or Government
-\item Spanning several rooms using enormous amounts of electricity
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Applications of very first `computers'}
-
-\begin{itemize}
-\item Calculation tables (sin, cos)
-\item Administration (statistics, taxes)
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Calculation tables}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/rekentabellen.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Military Applications}
-
-\begin{itemize}
-\item Artillery (trajectory of projectiles)
-\item Cryptography (enigma)
-\item OXO
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Bombe}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/bombe.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{EDSAC}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/edsac.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{EDSAC Debugging}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/edsac_crts.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{OXO}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/oxo.jpg}
-\end{figure}
-% http://www.dcs.warwick.ac.uk/~edsac/
-% optionally show OXO in emulator.
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Mainframes}
-
-\begin{itemize}
-\item Multi-user environment
-\item Batch
-\item Reserve computing time
-\item Not for practical use
-\item Very expensive: \$100,000+ / \$1,000,000+
-\item Not user friendly
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Mini-mainframes}
-
-\begin{figure}
-\includegraphics[width=0.45\linewidth]{images/pdp8.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Mini-mainframes}
-
-\begin{itemize}
-\item Expensive, but less than millions: \$10,000+
-\item Acceptable performance
-\item `Average' customers
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
 \frametitle{Introduction of the Personal Computer}
 
 \begin{itemize}
@@ -298,94 +163,6 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Personal Computers by Comparison}
-
-\begin{tabular}{|l|l|l|l|l|}
-\hline Year & Model & Introd. & Converted & Now (ebay) \\ \hline
-1977 & PET & \$795 & \$3150 & \$600-\$800 \\
-1980 & VIC-20 & \$299.95 & \$874 & \$30-\$110 \\
-1982 & C64 & \$595 & \$1480 & \$10-\$50 \\ \hline
-1977 & Apple ][ & \$1296 & \$5130 & \$200-\$750 \\
-1981 & IBM PC & \$1565 & \$4130 & \$150-\$1100 \\
-1982 & ZX Spec. & \pounds 175 & \pounds 567 & \pounds 80-\pounds 120 \\ \hline
-1977 & VCS & \$199 & \$768 & \$40-\$80 \\
-1982 & Vectrex & \$199 & \$495 & \$400-\$600 \\
-1983 & NES & \$179 & \$433 & \$25-\$120 \\ \hline
-\end{tabular}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{What about Hard Disks?}
-
-\begin{itemize}
-\item Don't need them
-\item Too expensive (+\$500/+\$2,000)
-\item Programs in RAM, firmware in ROM
-\item Power loss: program gone!
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Tapes!}
-
-\begin{figure}
-\includegraphics[width=0.6\linewidth]{images/datasette.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Tapes!}
-
-\begin{itemize}
-\item Sequential magnetic memory
-\item 350KB-2000KB
-\item Single/Double density
-\item Clumsy
-\item Manually seek forward and rewind tape
-\item Analog file table
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Floppies!}
-
-\begin{figure}
-\includegraphics[width=0.7\linewidth]{images/c1541.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Floppies!}
-
-\begin{itemize}
-\item Real floppy
-\item 5.25 inch
-\item SD, DD
-\item 300 RPM (5 revs/sec)
-\item 178KB
-\item 2 blocks per second (512 bytes/sec)
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
 \frametitle{Meet the most Successful PC of all time}
 
 \begin{figure}
@@ -435,6 +212,108 @@
 \begin{figure}
 \includegraphics[width=0.5\linewidth]{images/boot.png}
 \end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}{Intermezzo}
+
+\begin{itemize}
+\item Go to https://www.github.com/FolkertVanVerseveld
+\item Click on `workshop' and then `releases'
+\item Download and unpack the release archive
+\item Try to do some exercises
+\item Modify the examples or try to create a BASIC program
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Personal Computers by Comparison}
+
+\begin{tabular}{|l|l|l|l|l|}
+\hline Year & Model & Introd. & Now & Now (ebay) \\ \hline
+1977 & PET & \$795 & \$3150 & \$600-\$800 \\
+1980 & VIC-20 & \$299.95 & \$874 & \$30-\$110 \\
+1982 & C64 & \$595 & \$1480 & \$10-\$50 \\ \hline
+1977 & Apple ][ & \$1296 & \$5130 & \$200-\$750 \\
+1981 & IBM PC & \$1565 & \$4130 & \$150-\$1100 \\
+1982 & ZX Spec. & \pounds 175 & \pounds 567 & \pounds 80-\pounds 120 \\ \hline
+1977 & VCS & \$199 & \$768 & \$40-\$80 \\
+1982 & Vectrex & \$199 & \$495 & \$400-\$600 \\
+1983 & NES & \$179 & \$433 & \$25-\$120 \\ \hline
+\end{tabular}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{What about Hard Disks?}
+
+\begin{itemize}
+\item Don't need them
+\item Too expensive (+\$500/+\$2,000)
+\item Programs in RAM, firmware in ROM
+\item Power loss: program gone!
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Tapes!}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/datasette.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Tapes!}
+
+\begin{itemize}
+\item Sequential magnetic memory
+\item 350KB-2000KB
+\item Single/Double sides
+\item Clumsy
+\item Manually seek forward and rewind tape
+\item Analog file table
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Floppies!}
+
+\begin{figure}
+\includegraphics[width=0.7\linewidth]{images/c1541.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Floppies!}
+
+\begin{itemize}
+\item Real floppy
+\item 5.25 inch, SD, DD
+\item Single/Double sides
+\item 300 RPM (5 revs/sec)
+\item 178KB
+\item About 2 blocks/sec (512 bytes/sec)
+\end{itemize}
 
 \end{frame}
 
@@ -599,20 +478,6 @@ NES & 2048 & Ricoh 2A03 & 1.6 \\ \hline
 \begin{lstlisting}
 10FORI=0TO16:PRINT2^I,I:NEXTI
 \end{lstlisting}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}{Intermezzo}
-
-\begin{itemize}
-\item Go to https://www.github.com/FolkertVanVerseveld
-\item Click on `workshop' and then `releases'
-\item Download and unpack the release archive
-\item Try to do some exercises
-\item Modify the examples or try to create a BASIC program
-\end{itemize}
 
 \end{frame}
 
