--- a/thanks.tex
+++ b/thanks.tex
@@ -9,12 +9,15 @@
 \item bolo.ch
 \item c64-wiki.com
 \item codebase64.org
+%http://www.commodore.ca/manuals/c64_programmers_reference/c64-programmers_reference.htm
+\item commodore.ca
 \item commodore.hcc.nl
 \item csdb.dk
 \item dcs.warwick.ac.uk
 \item demoparty.net
 \item derbian.webs.com
 \item devil.iki.fi
+\item dmshas.de
 \item famitracker.com
 \item freeinfosociety.com
 \item granishmusicproduction. com
