--- a/workshop.tex
+++ b/workshop.tex
@@ -517,7 +517,7 @@ NES & 2048 & Ricoh 2A03 & 1.6 \\ \hline
 
 %----------------------------------------------
 
-\begin{frame}[noframenumbering]
+\begin{frame}
 \frametitle{X}
 
 \begin{itemize}
@@ -541,7 +541,7 @@ NES & 2048 & Ricoh 2A03 & 1.6 \\ \hline
 
 %----------------------------------------------
 
-\begin{frame}[noframenumbering]
+\begin{frame}
 \frametitle{Revision}
 
 \begin{itemize}
